fix(layout): avoiding horizontal scrolling

--- a/projects/eamode/eang/themes/mode/layout.css
+++ b/projects/eamode/eang/themes/mode/layout.css
@@ -34,6 +34,7 @@
       font-size: calc(var(--ea-sizer) * 1rem);
       grid-area: main;
       overflow: auto;
+      overflow-x: inherit;
       background: var(--ea-color-3);
 
       & ea-footer {
